--- a/index.html
+++ b/index.html
@@ -1,51 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <link href="styles.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Sour Gummy' rel='stylesheet'>
-        <title>Saffron Spice: Plant-Based Indian Restaurant</title>
-    </head>
-    <body>
-        <!-- Top Bar -->
-        <nav class="navbar">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#" style="color: white;">
-                    <img src="heading.png" alt="Title" style="width: 220px; height: 80px;">
-                </a>
-                <!--Toggle button (opens and closes dropdown)-->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <!--Dropdown Menu options-->
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="menu.html" style="color: white;">Menu</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="order.html" style="color: white;">Reservations/Orders</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="aboutUs.html" style="color: white;">Learn About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="reference.html" style="color: white;">Reference Page</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- everything below the top bar-->
-        <img src="food.jpg" class="photobg">
-        <h3 class="heading">Saffron Spice offers an exciting journey through the vibrant flavors of Indian cuisine, reimagined with a plant-based twist. Savor the richness of aromatic spices, fresh ingredients, and innovative dishes that honor traditional recipes accessibly and deliciously!</h3>
-        <img src="divide.png" class="divide" style="width: 50%; padding-bottom: 30px">
-        <img src="divide.png" class="divide" style="width: 50%; float: right; padding-bottom: 30px">
-    </body>
-</html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    >
+    <link href="styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sour Gummy" rel="stylesheet">
+    <title>Test Subject: Indian Restaurant</title>
+  </head>
+  <body>
+    <!-- Top Bar -->
+    <nav class="navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#" style="color: white;">
+          <img src="heading.png" alt="Title" style="width: 220px; height: 80px;">
+        </a>
+        <!-- Toggle button (opens and closes dropdown) -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Dropdown Menu options -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="menu.html" style="color: white;">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="order.html" style="color: white;">Reservations/Orders</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="aboutUs.html" style="color: white;">Learn About Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
+    <!-- Everything below the top bar -->
+    <img src="food.jpg" class="photobg">
+    <h3 class="heading">
+      Test Subject offers an exciting journey through the vibrant flavors of Indian
+      cuisine, reimagined with a plant-based twist. Savor the richness of aromatic
+      spices, fresh ingredients, and innovative dishes that honor traditional recipes
+      accessibly and deliciously!
+    </h3>
+    <img src="divide.png" class="divide" style="width: 50%; padding-bottom: 30px">
+    <img src="divide.png" class="divide" style="width: 50%; float: right; padding-bottom: 30px">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <!-- Include Bootstrap JS Bundle (only once) -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    
+    <!-- Custom script to force toggle behavior on the navbar toggler -->
+    <script>
+      // Although not strictly necessary because Bootstrap's data attributes do
+      // auto-toggle, this custom script ensures that clicking the toggler always toggles.
+      document.addEventListener("DOMContentLoaded", function () {
+        document.querySelector(".navbar-toggler").addEventListener("click", function () {
+          const navbarCollapse = document.getElementById("navbarNav");
+          const collapseInstance = bootstrap.Collapse.getInstance(navbarCollapse) ||
+            new bootstrap.Collapse(navbarCollapse, { toggle: false });
+          // Toggle the collapse every time the button is clicked
+          collapseInstance.toggle();
+        });
+      });
+    </script>
+  </body>
 </html>
