HASHED OUT REFERENCE PAGE IN ALL THE PAGES - COMMENTED OUT FOR NOW

--- a/CookingWorkshop.html
+++ b/CookingWorkshop.html
@@ -82,7 +82,7 @@
                     <a class="nav-link" href="CookingWorkshop.html">Our Cooking Workshops</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="reference.html">Reference Page</a>
+                  <!--  <a class="nav-link" href="reference.html">Reference Page</a> -->
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Rhs Tech.html">Our School's Tech Program</a>
