--- a/menu.html
+++ b/menu.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="aboutUs.html" style="color: white;">Learn About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="reference.html" style="color: white;">Reference Page</a>
+                          <!--  <a class="nav-link" href="reference.html" style="color: white;">Reference Page</a> -->
                         </li>
                     </ul>
                 </div>
