--- a/aboutUs.html
+++ b/aboutUs.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="order.html" style="color: white;">Reservations/Orders</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link" href="reference.html" style="color: white;">Reference Page</a>
+                          <!--  <a class="nav-link" href="reference.html" style="color: white;">Reference Page</a> -->
                         </li>
                     </ul>
                 </div>
